--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 <table cellspacing="20">
   <tr>
-    <td><img src="images/FB.png" alt="Gergely Profile picture" ></td>
+    <td><img src="images/FB.PNG" alt="Gergely Profile picture" ></td>
     <td><h1>Gergely Sass</h1>
     <p><em>Founder and CTO of <strong>Sass Creative Studios</strong></em></p>
     <p>I am a pre-silicon IC verification team lead and a web developer. I ❤️ dogs and wine.</p></td>
