--- a/index.html
+++ b/index.html
@@ -4,12 +4,13 @@
 <head>
   <meta charset="utf-8" name="description" content="This is an awsome webpage">
   <title>Gergely's Personal Webpage</title>
+  <link rel="stylesheet" href="css/styles.css">
 </head>
 
 <body>
 <table cellspacing="20">
   <tr>
-    <td><img src="images/FB.PNG" alt="Gergely Profile picture" ></td>
+    <td><img src="images/profile.gif" alt="Gergely Profile picture" ></td>
     <td><h1>Gergely Sass</h1>
     <p><em>Founder and CTO of <strong>Sass Creative Studios</strong></em></p>
     <p>I am a pre-silicon IC verification team lead and a web developer. I ❤️ dogs and wine.</p></td>
